fixed mobile overflow

--- a/src/App.css
+++ b/src/App.css
@@ -230,13 +230,6 @@ header button:first-child,
   font-weight: 600;
 }
 
-.mod-filters {
-  border-radius: 6px;
-  display: flex;
-  flex-direction: row;
-  gap: 8px;
-}
-
 .mod-filters p {
   margin-bottom: 0;
   line-height: 1.5;
@@ -397,122 +390,8 @@ span.token {
   font-size: 1rem;
 }
 
-.settings-box .options {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  gap: 2%;
-}
-
-legend {
-  font-size: 1.1rem;
-  font-weight: 600;
-  color: #bd93f9;
-}
-
-.color-option {
-  flex: 1;
-  text-align: center;
-  padding: 0.6em 0.6em 0.3em;
-  border: 1px solid #3a3638;
-  border-radius: 10px;
-  line-height: 1.2;
-  font-size: 1rem;
-}
-
-.display-option {
-  padding: 0.6em;
-  border: 1px solid #3a3638;
-  border-radius: 10px;
-  margin-bottom: 10px;
-  font-weight: 600;
-}
-
-.opt-desc {
-  display: block;
-  padding-top: 0.3em;
-  font-size: 0.9em;
-  color: #858f99;
-  font-weight: 400;
-}
-
-.color-option:hover,
-.display-option:hover {
-  cursor: pointer;
-  background-color: #3a3638;
-}
-
-.settings-box input[type="radio"] {
-  margin-right: 0.8em;
-}
-
-.settings-box input[type="radio"]:checked + label,
-.settings-box input[type="checkbox"]:checked + label {
-  background-color: #3a3638 !important;
-}
-
-.color {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  width: 100%;
-  min-height: 50px;
-  margin-bottom: 0.6em;
-}
-
-label.selected {
-  background: green;
-}
-
-.label-text {
-  display: block;
-  background: #000;
-  padding: 10px;
-}
-
-.gold-gr {
-  background: linear-gradient(
-    to right,
-    #bf953f,
-    #fcf6ba,
-    #b38728,
-    #fbf5b7,
-    #aa771c
-  );
-}
-
-.silver-gr {
-  background: linear-gradient(
-    to right,
-    #a8a9ad,
-    #dfdfdf,
-    #949494,
-    #dfdfdf,
-    #999999
-  );
-}
-
 .warning {
   color: #ea8690;
-}
-
-.other-gr {
-  background: black;
-}
-
-.start-btn {
-  margin-top: 12px;
-  display: block;
-  background-color: #50fa7b;
-  color: #3a3638;
-  border: 1px solid #3a3638;
-  padding: 1em 1.2em;
-  max-width: 300px;
-  text-decoration: none;
-  text-align: center;
-  border-radius: 12px;
-  font-size: 1.2rem;
-  font-weight: 600;
 }
 
 .location {
@@ -560,9 +439,9 @@ label.selected {
 }
 
 /* Config Modal */
-.fade.modal.show {
+/* .fade.modal.show {
   max-width: 100vw;
-}
+} */
 
 .modal-backdrop {
   --bs-backdrop-opacity: 0.85 !important;
@@ -819,6 +698,12 @@ label.selected {
   header {
     padding-bottom: 0.5em;
     border-bottom: 1px solid hsl(312 8% 20% / 1);
+  }
+  .mod-filters {
+    border-radius: 6px;
+    display: flex;
+    flex-direction: row;
+    gap: 8px;
   }
 }
 
